--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,19 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t rcua93/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true stephengrider/react-test npm test
-
-after_success:
-  - docker build -t stephengrider/multi-client ./client
-  - docker build -t stephengrider/multi-nginx ./nginx
-  - docker build -t stephengrider/multi-server ./server
-  - docker build -t stephengrider/multi-worker ./worker
-  # Log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  # Take those images and push them to docker hub
-  - docker push stephengrider/multi-client
-  - docker push stephengrider/multi-nginx
-  - docker push stephengrider/multi-server
-  - docker push stephengrider/multi-worker
+  - docker run -e CI=true rcua93/react-test npm testrcua93
+after_successrcua93
+  - docker build -t rcua93/multi-client ./client
+  - docker build -t rcua93/multi-nginx ./nginx
+  - docker build -t rcua93/multi-server ./server
+  - docker build -t rcua93/multi-worker ./worker
+  # Log in to the dorcua93
+  - echo "$DOCKER_PArcua93ker login -u "$DOCKER_ID" --password-stdin
+  # Take those imagercua93em to docker hub
+  - docker push rcua93/multi-client
+  - docker push rcua93/multi-nginx
+  - docker push rcua93/multi-server
+  - docker push rcua93/multi-workerrcua93
